@@ -26,6 +26,7 @@ All settings are saved automatically whenever you leave the edited data. If you 
 on the Packeta site, it is possible to request a test account at the Customer Service email [info@zasilkovna.cz](mailto:info@zasilkovna.cz):
 - **API key** – you can find your key in the client section of Packeta in the *Client support* tab
 - **Sender name** - the sender name you have set in the client section of the list of senders
+- **As the order ID, use** - select whether to use ID or Reference as order ID in export
 
 ### Carrier settings
 - To add a carrier enter the menu *Shipping* - *Carriers*.
@@ -129,6 +130,7 @@ V případě, že nemáte uživatelský účet na stránkách Zásilkovny, je mo
 
 - **Klíč API**  - váš klíč API naleznete v [klientské sekci Zásilkovny](https://client.packeta.com/cs/support/) v části **Klientská podpora**
 - **Označení odesílatele** - označení odesílatele které máte nastaveno v [klientské sekci](https://client.packeta.com/cs/senders/) v seznamu odesílatelů
+- **Jako číslo objednávky u zásilek uvádět** - vyberte, zda se má při exportu použít id nebo kód jako číslo objednávky
 
 ### Nastavení dopravců
 - Dopravce vytvoříte v menu *Doručení* - *Dopravci*.
