@@ -189,7 +189,8 @@ class Installer
             ConfigHelper::update('PACKETERY_LABEL_FORMAT', 'A7 on A4') &&
             ConfigHelper::update('PACKETERY_WIDGET_AUTOOPEN', 0) &&
             ConfigHelper::update('PACKETERY_CRON_TOKEN', \Tools::passwdGen(32)) &&
-            ConfigHelper::update('PACKETERY_LABEL_MAX_AGE_DAYS', 7)
+            ConfigHelper::update('PACKETERY_LABEL_MAX_AGE_DAYS', 7) &&
+            ConfigHelper::update('PACKETERY_ID_PREFERENCE', Packetery::ID_PREF_ID)
         );
     }
 
