@@ -22,6 +22,9 @@ $_MODULE['<{packetery}prestashop>packetery_a4f70091d9d7af3201e79bce9c5f6543'] = 
 $_MODULE['<{packetery}prestashop>packetery_36c8fa1514f56cef3a7e2c783ec819cf'] = 'Označení odesílatele najdete najdete v klientské sekci';
 $_MODULE['<{packetery}prestashop>packetery_9c1ed763194eba6e2819ce9d84d37cb2'] = 'v poli \"označení\".';
 $_MODULE['<{packetery}prestashop>packetery_1f597c0dada2621a92c1ee79e6b43999'] = 'Formát štítku';
+$_MODULE['<{packetery}prestashop>packetery_c07518b15fc1ccf70a90a96d7969b8c2'] = 'Jako číslo objednávky u zásilek uvádět';
+$_MODULE['<{packetery}prestashop>packetery_d79cf3f429596f77db95c65074663a54'] = 'id objednávky';
+$_MODULE['<{packetery}prestashop>packetery_1e860e56970a81a1ba3e1fcb7fccc846'] = 'kód objednávky';
 $_MODULE['<{packetery}prestashop>packetery_5df9377515dc5fba190cd021d1807316'] = '1/8 A4, tisk na A4, 8ks/stránka';
 $_MODULE['<{packetery}prestashop>packetery_1e5b2eadf83c2678a69f1d4608b673c8'] = '105x35mm, tisk na A4, 16ks/stránka';
 $_MODULE['<{packetery}prestashop>packetery_ff0c01bbc46cf7e4687f36889fbb9270'] = '1/4 A4, tisk na A4, 4ks/stránka';
